# amazon-lfv-edge-cpp-inference-iot-greengrass

./: .gitignore  .gitmodules  README.md  THIRD-PARTY-LICENSES  local-gdk-build.sh
aws.iot.lookoutvision.inference/: gdk-config.json  recipe.yaml
lookoutvision-inference-src/: CMakeLists.txt  buildscript.sh
lookoutvision-inference-src/cmake/: common.cmake
lookoutvision-inference-src/proto/: edge-agent.proto
lookoutvision-inference-src/src/: main.cc
